@@ -1,3 +1,7 @@
+2010-05-13  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* flickr/api.py: Added a random group pickup method among 'The Commons'.
+	
 2010-05-12  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* flickr/api.py: Added a random group pickup method among 'Your Groups'.
